5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1838_1278.log
== TEST (2019-06-26 00:32:39) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
while(1)
	a =input("")
	if(a = '-1'):
		break
	b = input("")
	acu+=M[v.find(a[0])][v.find(b[0])]
print(acu)
-- ERROR:
File "XXXX", line 5
    while(1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:32:45) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
while(1):
	a =input("")
	if(a = '-1'):
		break
	b = input("")
	acu+=M[v.find(a[0])][v.find(b[0])]
print(acu)
-- ERROR:
File "XXXX", line 7
    if(a = '-1'):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:32:51) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
while(1):
	a =input("")
	if(a == '-1'):
		break
	b = input("")
	acu+=M[v.find(a[0])][v.find(b[0])]
print(acu)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 00:33:05) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
while(1):
	a =input("")
	if(a == '-1'):
		break
	b = input("")
	acu+=M[v.find(a[0])][v.find(b[0])]
print(acu)
-- EXECUTION TIME:
1.26685
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
19
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
34
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:33:11) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
while(1):
	a =input("")
	if(a == '-1'):
		break
	b = input("")
	acu+=M[v.find(a[0])][v.find(b[0])]
print(acu)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:36:08) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
a = input("")
b = 'a'
while(1):
	b = input("")
	if(b == '-1'):
		break
	acu+=M[v.find(a[0])][v.find(b[0])]
	a = b
print(acu)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 00:36:27) 
-- CODE:
from numpy import *
v = "1234567"
M  = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
acu = 0
a = input("")
b = 'a'
while(1):
	b = input("")
	if(b == '-1'):
		break
	acu+=M[v.find(a[0])][v.find(b[0])]
	a = b
print(acu)
-- EXECUTION TIME:
1.02746
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
